* Improvement: Expanded video background support.
    * YouTube and Vimeo support added.
    * Simplified options for inputting video.
    * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
* Improvement: Design enhancements for default post showcase display.
* Improvement: Design enhancements for Magnific Popup lightbox navigation.
* Improvement: Design enhancements to Divider element.
* Improvement: Design enhancements to Progress Bars element.
* Improvement: Design enhancements to Milestone element.
* Improvement: Design enhancements to Milestone Ring element.
* Improvement: Design enhancements to Testimonial element.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.
* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
* Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
* Improvement: More default spacing between elements in custom layouts.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Sticky menu shouldn't display on any mobile device, no matter the viewport size.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.