@@ -15,6 +15,7 @@ Jump Start Changelog
     * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
     * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
     * Progressive loading for longer videos.
+    * Fallback image now displays on large mobile devices, where background video isn't supported.
 * Improvement: Design enhancements for default post showcase display.
 * Improvement: Design enhancements for Magnific Popup lightbox navigation.
 * Improvement: Design enhancements to Divider element.
